[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climate-cluster"
version = "0.1.0"
description = "Pipeline scaffold for clustering Brazilian climate stations (INMET)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
]

[project.scripts]
climate-cluster = "climate_cluster.pipeline.run:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

