[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climate-cluster"
version = "0.1.0"
description = "Pipeline scaffold for clustering Brazilian climate stations (INMET)."
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "torch>=2.7,<2.8",
]

[project.scripts]
climate-cluster = "methods.cluster.cluster_pipeline:main"
lstm-cluster = "methods.lstm_cluster.run_experiment:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"methods.lstm_cluster" = ["*.yaml", "*.md"]


