[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climate-cluster"
version = "0.1.0"
description = "Pipeline scaffold for clustering Brazilian climate stations (INMET)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "statsmodels>=0.14.0",
]

[project.scripts]
climate-cluster = "methods.cluster.cluster_pipeline:main"
lstm-cluster = "methods.lstm_cluster.run_experiment:main"
arma-baseline = "methods.arma.run_arma:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"methods.lstm_cluster" = ["*.yaml", "*.md"]
"methods.arma" = ["*.md"]

